# selmr

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Cargo.toml  LICENSE.txt  README.md  README.rst  RELEASES.md  pyproject.toml  setup.cfg  setup.py  test.json
docs/: 00 Lexicon.ipynb  00_finding multiple word meanings.md  01 Using SELMR.ipynb  01 Using SELMR.md  02 Multiset representations.md  02 Working with multisets.ipynb  03 Search engine.ipynb  03 finding multiple word meanings.ipynb  03 finding multiple word meanings.md  04 Search engine.ipynb  04 Search engine.md  04 finding multiple word meanings.ipynb  05 Masking.ipynb  conf.py  index.rst  make.bat  requirements.txt
src/: hac.rs  lib.rs  main.rs  pyselmr.rs  selmr.rs  text_structs.rs  text_structs_old.rs  tokenizer.rs
src/selmr/: __init__.py  const.py  extraction.py  extractor.py  multisets.py  search.py  selmr.py  skeleton.py  tokenizer.py
tests/: conftest.py  test_skeleton.py  tests_selmr.rs
