[package]
name = "selmr"
description = "Package to create and use Simple Explainable Language Multiset Representations"
readme = "README.md"
homepage = "https://github.com/wjwillemse/selmr"
repository = "https://github.com/wjwillemse/selmr"
license = "MIT"
version = "0.2.1"
edition = "2021"

[lib]
name = "selmr"
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
counter = "0.5.7"
unicode-segmentation = "1.11.0"
regex = "1.10.3"
zip = "0.6"
pyo3-log = "0.9.0"
indexmap = {version = "2.2.6", features = ["serde"] }
log = "0.4.21"
pyo3 = "0.20.3"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "src/header.html"
]
