[package]
name = "selmr"
description = "Package to create and use Simple Explainable Language Multiset Representations"
readme = "README.md"
homepage = "https://github.com/wjwillemse/selmr"
repository = "https://github.com/wjwillemse/selmr"
license = "MIT"
version = "0.3.1"
edition = "2021"

[lib]
name = "selmr"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.21.1", features = ["extension-module", "gil-refs"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
counter = "0.5.7"
unicode-segmentation = "1.11.0"
regex = "1.10.4"
zip = "0.6.6"
indexmap = {version = "2.2.6", features = ["serde"] }
log = "0.4.21"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "src/header.html"
]
