[package]
name = "selmr"
description = "Package to create and use Simple Explainable Language Multiset Representations"
readme = "README.md"
homepage = "https://github.com/wjwillemse/selmr"
repository = "https://github.com/wjwillemse/selmr"
license = "MIT"
version = "0.4.2"
edition = "2021"

[lib]
name = "selmr"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.2", features = ["abi3-py38",  "extension-module", "multiple-pymethods"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
counter = "0.6.0"
unicode-segmentation = "1.11.0"
regex = "1.10.6"
zip = "2.1.6"
indexmap = {version = "2.3.0", features = ["serde"] }
log = "0.4.22"
priority-queue = "2.0.3"
ordered-float = "4.2.2"
indextree = "4.7.0"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "src/header.html"
]
